--- a/style.css
+++ b/style.css
@@ -16,7 +16,14 @@ body {
 .header__avatar:hover {
   color: rgb(17, 1, 15);
 }
-
+.header__avatar:hover {
+  color: red;
+}
+.header__avatar {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
 .header__title {
   margin: 30px 0 10px 0;
   font-size: 30px;
